--- a/views/trabajador/welcome.html
+++ b/views/trabajador/welcome.html
@@ -1,3 +1,8 @@
+<audio autoplay="true">
+	<source src="{{'src/audio/trabajador/welcome.m4a'|dinamicSource}}" type="audio/mp4">
+	<source src="src/audio/trabajador/welcome.m4a"  type="audio/mp4">
+</audio>
+<p>{{'Hola'|dinamicSource:'palabra'}}</p>
 <div class="row">
 	<div class="col-sm-4 col-sm-offset-2">
 		<img src="img/logo.png" class="img-responsive">
@@ -12,4 +17,3 @@
 		</div>
 	</div>
 </div>
-<audio src="src/audio/trabajador/welcome.m4a" autoplay="true"></audio>
