--- a/views/trabajador/evaluacion.html
+++ b/views/trabajador/evaluacion.html
@@ -42,7 +42,7 @@
 				<strong>Respuesta :</strong>
 				<div 
 				ng-repeat="(key,alternativa) in ficha.pregunta.alternativas"
-				class="radio" ng-class="{'has-success':ficha.respuesta==alternativa.id}">
+				class="radio" ng-class="{'has-feedback':ficha.respuesta==alternativa.id}">
 					<label 
 					ng-class="{'input-lg':ficha.respuesta==alternativa.id}" >
 						<input 
@@ -61,7 +61,7 @@
 	<!-- Grupo de Botones -->
 	<div class="list-group col-xs-12" role="group">
 		<div class="btn-group pull-right">
-			<button type="button"  ng-click="buttons.Omitir.action()" ng-disabled="buttons.Omitir.disable" class="btn btn-warning">Nose</button>
+			<button type="button"  ng-click="buttons.Omitir.action()" ng-disabled="buttons.Omitir.disable" class="btn btn-warning">No sé</button>
 			<button type="button"  ng-click="buttons.Anterior.action()" ng-disabled="buttons.Anterior.disable" class="btn btn-primary">Anterior</button>
 			<button type="button"  ng-click="buttons.Siguiente.action()" ng-disabled="buttons.Siguiente.disable" class="btn btn-primary">Siguiente</button>
 			<button type="button"  ng-click="buttons.Terminar.action()" ng-disabled="buttons.Terminar.disable" class="btn btn-info">Terminar</button>
