--- a/views/trabajador/introduccion.html
+++ b/views/trabajador/introduccion.html
@@ -1,3 +1,7 @@
+<audio autoplay="true">
+	<source src="{{'src/audio/trabajador/introduccion.m4a'|dinamicSource}}" type="audio/mp4">
+	<source src="src/audio/trabajador/introduccion.m4a"  type="audio/mp4">
+</audio>
 <div class="row">
 	<div class="col-sm-4 col-sm-offset-2">
 		<img src="img/logo.png" class="img-responsive">
@@ -16,5 +20,3 @@
 		</div>
 	</div>
 </div>
-
-<audio src="src/audio/trabajador/introduccion.m4a" autoplay="true"></audio>
