--- a/views/admin/inicio.html
+++ b/views/admin/inicio.html
@@ -6,11 +6,15 @@
 			</div>
 			<div class="panel-body">
 				<div class="col-md-8" style="padding-top: 50px;padding-bottom: 50px">
-				 	<p>Bienvenido a la Plataforma de Certificación <strong>QPLAN</strong><br>Qualitatcorp todos los derechos reservados.</p>
+				 	<p><font size="5">Bienvenido a la Plataforma de Certificación <strong>QPLAN</strong><br>©2017 Qualitatcorp todos los derechos reservados.</p></font>
 				</div>
 				<div class="col-md-4" style="padding-top: 50px;padding-bottom: 50px">
 					<img src="img/logo.png" alt="Qualitatcorp" height="50">
 				</div>
+			</div>
+			<div class="panel-foot">
+			<em>Simulador de Qualitatcorp<br>
+			La Vega 365, Talcahuano, VIII Región</em>
 			</div>
 		</div>
 	</div>	
