--- a/views/empresa/view.html
+++ b/views/empresa/view.html
@@ -1,17 +1,24 @@
 <div class="row">
-	<div class="col-md-3">
+	<div class="well col-md-3">
 		<ul class="nav nav-pills nav-stacked">
-  		<li><a href="#!/empresa/createclasificacion">Crear Clasificación</a></li>
-  		<li><a href="#">Menu 1</a></li>
-  		<li><a href="#">Menu 2</a></li>
-  		<li><a href="#">Menu 3</a></li>
+		<li><span>Opciones</span></li>
+  		<li><a href="#">Editar</a></li>
+  		<li><a href="#">Eliminar</a></li>
+  		<li><span>Usuario</span></li>
+  		<li><a href="#">Ver Usuarios</a></li>
+  		<li><a href="#">Crear Usuarios</a></li>
+  		<li><span>Evaluación</span></li>
+  		<li><a href="#">Ver Fichas</a></li>
+  		<li><a href="#">Crear Clasificación</a></li>
+  		<li><span>Orden de Trabajo</span></li>
+  		<li><a href="#">Ver Órdenes</a></li>
+  		<li><a href="#">Ingresar Orden</a></li>
 		</ul>
 	</div>	
 	<div class="col-md-9">
 	<div class="page-header">
-			<h1>Ver <small>a {{empresa.nombre}}</small></h1>
+			<h1>{{empresa.nombre}} <small>Empresa</small></h1>
 		</div>
-		<h2>Datos</h2>
 		<div class="table-responsive">          
 			<table class="table table-bordered">
 				<tbody>
