--- a/views/trabajador/welcome.html
+++ b/views/trabajador/welcome.html
@@ -2,7 +2,7 @@
 	<source src="{{'src/audio/trabajador/welcome.m4a'|dinamicSource}}" type="audio/mp4">
 	<source src="src/audio/trabajador/welcome.m4a"  type="audio/mp4">
 </audio>
-<p>{{'Hola'|dinamicSource:'palabra'}}</p>
+<p>{{'Hola'|dinamicSource:'palabraas'}}</p>
 <div class="row">
 	<div class="col-sm-4 col-sm-offset-2">
 		<img src="img/logo.png" class="img-responsive">
