--- a/views/trabajador/mantenedor/create.html
+++ b/views/trabajador/mantenedor/create.html
@@ -5,6 +5,45 @@
 		</div>
 	</div>
 	<div class="col-md-12">
-		<div ng-include="'views/trabajador/mantenedor/form.html'"></div>
+		<p class="text-muted">Los campos con * son obligatorios</p>
+		<form name="workerForm">
+		<!-- form -->
+				<div class="col-md-12">
+					<div class="form-group" ng-class="{ 'has-error': workerForm.rut.$touched && workerForm.rut.$invalid }">
+						<label>RUT*</label>
+						<input name="rut" type="text" ng-model="worker.rut" class="form-control" placeholder="Ingrese su RUT" required>
+					</div>
+					<div class="form-group">
+						<label>Nombres</label>			
+						<input type="text" ng-model="worker.nombre" class="form-control" placeholder="Ingrese sus nombres">		
+					</div>
+					<div class="form-group">
+						<label>Apellido Paterno</label>
+						<input type="text" ng-model="worker.paterno" class="form-control" placeholder="Ingrese su apellido parterno">
+					</div>
+					<div class="form-group">
+						<label>Apellido Materno</label>
+						<input type="text" ng-model="worker.materno" class="form-control" placeholder="Ingrese su apellido materno">
+					</div>
+					<div class="form-group">
+						<label>Estado Civil</label>
+						<select placeholder="Ingrese estado civil" class="form-control" ng-model="worker.civil" ng-init="worker.civil=worker.civil||'SOLTERO/A'" ng-options="h for h in select.civil" required></select>
+					</div>
+					<div class="form-group">
+						<label>Talla</label>
+						<select placeholder="Ingrese talla de vestir" class="form-control" ng-model="worker.talla" ng-init="worker.talla=worker.talla||'L'" ng-options="h for h in select.talla" required></select>
+					</div>
+				</div>
+
+
+				<div class="col-md-12">
+					<div class="form-group">
+						<!-- <a href="#!/worker/admin" class="btn btn-default">Volver</a> -->
+						<button onclick="window.history.back()" class="btn btn-default">Volver</button>
+						<button ng-disabled="workerForm.$invalid" type="submit" class="btn btn-primary" ng-click="save()">Guardar</button>
+					</div>
+				</div>
+
+				</form>
 	</div>
 </div>
