--- a/views/trabajador/mantenedor/createclasificacion.html
+++ b/views/trabajador/mantenedor/createclasificacion.html
@@ -1,10 +1,10 @@
 <div class="row">
 	<div class="col-md-12">
 		<div class="page-header">
-			<h1>Crear<small> Perfil</small></h1>
+			<h1>Agregar<small> Trabajador</small></h1>
 		</div>
 	</div>
 	<div class="col-md-12">
-		<div ng-include="'views/perfil/form.html'"></div>
+		<div ng-include="'views/trabajador/mantenedor/form.html'"></div>
 	</div>
 </div>
