--- a/views/evaluation/formpregunta.html
+++ b/views/evaluation/formpregunta.html
@@ -2,7 +2,7 @@
 
 <form name="preguntaForm">
 	
-<div class="row">
+<div class="col-md-12">
 		<div class="col-md-6">
 		<div class="form-group" ng-class="{ 'has-error': preguntaForm.pregunta.$touched && preguntaForm.pregunta.$invalid }">
 		<label>Pregunta*</label>
