--- a/views/perfil/form.html
+++ b/views/perfil/form.html
@@ -1,8 +1,7 @@
 <p class="text-muted">Los campos con * son obligatorios</p>
 
 <form name="perfilForm">
-	
-	<div class="col-md-12">
+
 		<div class="form-group" ng-class="{ 'has-error': perfilForm.nombre.$touched && perfilForm.nombre.$invalid }">
 			<label>Nombre*</label>
 			<input 
@@ -32,7 +31,7 @@
 			ng-model="perfil.documento"
 			></textarea>
 		</div>
-	</div>
+
 
 
 	<h1>Clasificaciones</h1>
@@ -43,13 +42,13 @@
 	</div>
 
 	<div class="row" data-ng-repeat="clasificacion in clasificaciones">
-		<div class="form-group col-md-9" ng-class="{ 'has-error': perfilForm.clasificacion{{$index + 1}}.$touched && perfilForm.altenativa{{$index + 1}}.$invalid }">
+		<div class="form-group col-md-9" ng-class="{ 'has-error': perfilForm.clasificacion{{$index + 1}}.$touched && perfilForm.clasificacion{{$index + 1}}.$invalid }">
 			<input 
 			type="text" 
 			name="clasificacion{{$index + 1}}" 
-			ng-model="interface.clasificacion" 
+			ng-model="clasificacion.clasificacion" 
 			placeholder="Seleccione una clasificación" 
-			uib-typeahead="clasificacion.id as clasificacion.nombre for clasificacion in clas" 
+			uib-typeahead="clasificacion as clasificacion.nombre for clasificacion in getClasificaciones($viewValue)"
 			class="form-control">
 		</div>
 		<div class="form-group col-md-2" ng-class="{ 'has-error': perfilForm.acierto{{$index + 1}}.$touched && perfilForm.acierto{{$index + 1}}.$invalid }">
@@ -65,10 +64,8 @@
 	</div>
 
 	<div class="form-group">
-		<div class="col-md-2">
 			<button onclick="window.history.back()" class="btn btn-default">Volver</button>
 			<button ng-disabled="perfilForm.$invalid" type="submit" class="btn btn-primary" ng-click="save()">Guardar</button>
-		</div>
 	</div>
 
 </form>
