--- a/views/perfil/view.html
+++ b/views/perfil/view.html
@@ -2,9 +2,20 @@
 	<div class="well col-md-3">
 		<ul class="nav nav-pills nav-stacked">
 		<li><span>Opciones</span></li>
-		<li><a href="#">Administrar Perfiles</a></li>
-  		<li><a href="#">Eliminar Perfil</a></li>
-  		<li><a href="#">Editar Perfil</a></li>
+		<li><a href="#!/perfil/admin">Administrar Perfiles</a></li>
+		<li><a href="#!/perfil/edit/{{perfil.id}}">Editar Perfil</a></li>
+  		<li><a   
+						mwl-confirm
+						title="Eliminar a perfil {{perfil.nombre}}"
+						message="Seguro que desea quitar a {{ perfil.nombre }}"
+						placement="right"
+						confirm-text="Eliminar"
+						cancel-text="Cancelar"
+						on-confirm="remove(perfil.id)"
+						confirm-button-type="danger"
+						cancel-button-type="default">
+						Eliminar Perfil
+					</a></li>
 		</ul>
 		</div>	
 	<div class="col-md-9">
