update iframe y datos de trabajador en termino controller
update iframe y datos de trabajador en termino controller

--- a/views/trabajador/antecendentes.html
+++ b/views/trabajador/antecendentes.html
@@ -143,6 +143,12 @@
 				</div>
 			</div> -->
 			<!-- fin form -->
+			<div class="form-group">
+				<label class="col-sm-4 control-label">Sexo</label>
+				<div class="col-sm-8">
+					<button placeholder="Seleccione..." type="button" class="btn btn-default" ng-model="trabajador.sexo" bs-options="n as n for n in Select.sexo" bs-select></button>
+				</div>
+			</div>
 		</div>
 		
 		<div class="form-group">
