--- a/views/trabajador/termino.html
+++ b/views/trabajador/termino.html
@@ -4,11 +4,7 @@
 	</div>
 </div> -->
 <div class="row">
-<div class="col-md-12">
-	<div class="embed-responsive embed-responsive-16by9">
-		<iframe src="http://tma.timshr.com/pca/f9e91068-912c-4303-82a3-5ae344332622/8"></iframe>
-	</div>
-	
+    <iframe ng-src="{{url}}" width="1200" height="600"></iframe>
 </div>
 <!-- 	<div class="col-md-8 col-md-offset-2" style="position: relative;top: 20px;"> 
 		<div class="jumbotron">
@@ -21,4 +17,6 @@
 			<br>
 		</div>
 	</div> -->
+<div>
+	<button class="btn btn-info" ng-click="changeIt()">Cambiar</button>
 </div>
