--- a/views/trabajador/iframe.html
+++ b/views/trabajador/iframe.html
@@ -4,8 +4,8 @@
 	</div>
 </div>
 <div class="row">
-    <iframe ng-src="{{url}}" class="col-md-12 thumbnail" height="650"></iframe>
-</div>
+    <iframe ng-src="{{url}}" class="col-md-11 thumbnail" height="650"></iframe>
+
 <!-- 	<div class="col-md-8 col-md-offset-2" style="position: relative;top: 20px;"> 
 		<div class="jumbotron">
 			<h3 class="text-center">Termino de evaluación teoríca</h3>
@@ -17,9 +17,10 @@
 			<br>
 		</div>
 	</div> -->
-<div class="row">
-	<div class="col-md-12">
-	<button class="btn btn-info pull-right" ng-click="termino()" ng-disabled="true">Terminar</button>
-		
+ 
+	<div class="col-md-1">
+	 
+		<button class="btn btn-info  col-md-auto" ng-click="termino()" >Terminar</button>
+	 
 	</div>
 </div>
