--- a/views/trabajador/iframe.html
+++ b/views/trabajador/iframe.html
@@ -1,10 +1,10 @@
-<div class="row">
+<!-- <div class="row">
 	<div class="col-sm-4">
 		<img src="img/logo.png" class="img-responsive">
 	</div>
-</div>
+</div> -->
 <div class="row">
-    <iframe ng-src="{{url}}" class="col-md-12 thumbnail" height="650"></iframe>
+    <iframe ng-src="{{url}}" class="col-md-12 thumbnail" height="700"></iframe>
 </div>
 <!-- 	<div class="col-md-8 col-md-offset-2" style="position: relative;top: 20px;"> 
 		<div class="jumbotron">
