--- a/views/trabajador/welcome.html
+++ b/views/trabajador/welcome.html
@@ -1,7 +1,8 @@
 <audio autoplay="true">
-	<source src="{{'src/audio/trabajador/welcome.m4a'|dinamicSource}}" type="audio/mp4">
-	<source src="src/audio/trabajador/welcome.m4a"  type="audio/mp4">
+	<source src="{{'src/audio/trabajador/WELCOME.mp3'|dinamicSource}}" type="audio/mp4">
 </audio>
+
+
 <div class="row">
 	<div class="col-sm-4 col-sm-offset-2">
 		<img src="img/logo.png" class="img-responsive">
@@ -10,8 +11,8 @@
 <div class="row">
 	<div class="col-sm-8 col-sm-offset-2" style="position: relative;top: 20px;">
 		<div class="jumbotron" style="padding-bottom: 80px;">
-			<h2>Software de Competencias Laborales</h2>
-			<p class="text-justify">El software de competencias laborales ha sido desarrollado con la finalidad de evaluar las capacidades de forma que estas demuestren el real nivel de conocimiento en el área indicada por el trabajador.</p>
+			<h2>Certificación de Competencias Laborales</h2>
+			<p class="text-justify">Ha sido desarrollada con la finalidad de medir y demostrar las competencias laborales del trabajador en distintas áreas.</p>
 				<a href="#!/introduccion" class="btn btn-success pull-right">Ingresar</a>
 		</div>
 	</div>
