--- a/views/empresa/admin.html
+++ b/views/empresa/admin.html
@@ -14,7 +14,7 @@
 					<th>Nombre</th>
 					<th>Rut</th>
 					<th>Razon Social</th>
-					<th>Opciones</th>
+					<th style="width: 190px">Opciones</th>
 				</tr>
 				<tr>
 					<th>#</th>
