--- a/views/evaluation/viewevaluation.html
+++ b/views/evaluation/viewevaluation.html
@@ -29,7 +29,7 @@
 					<th></th>
 					<th>Pregunta</th>
 					<th>Nivel</th>
-					<th>Opciones</th>
+					<th style="width: 145px">Opciones</th>
 				</tr>
 				<tr>
 					<th>#</th>
