--- a/views/trabajador/config.html
+++ b/views/trabajador/config.html
@@ -11,4 +11,8 @@
 			<button ng-click="removeHostingSrc()" class="btn btn-danger btn-sm">Eliminar</button>
 		</td>
 	</tr>
+	<tr>
+		<td>Sessión</td>
+		<td><button class="btn btn-warning btn-sm" ng-click="clearSession()">Limpiar Sessión</button></td>
+	</tr>
 </table>
