--- a/views/trabajador/mantenedor/admin.html
+++ b/views/trabajador/mantenedor/admin.html
@@ -10,7 +10,7 @@
 					<th>Nombre</th>
 					<th>Apellido</th>
 					<th>Rut</th>
-					<th>Opciones</th>
+					<th style="width: 190px">Opciones</th>
 				</tr>
 				<tr>
 					<th>#</th>
