--- a/views/evaluation/adminevaluation.html
+++ b/views/evaluation/adminevaluation.html
@@ -11,7 +11,7 @@
 					<th></th>
 					<th>Nombre</th>
 					<th>Descripción</th>
-					<th>Opciones</th>
+					<th style="width: 190px">Opciones</th>
 				</tr>
 				<tr>
 					<th>#</th>
