--- a/views/ot/admin.html
+++ b/views/ot/admin.html
@@ -7,7 +7,7 @@
 	<div class="col-md-12">
 	</div>
 	<div class="col-md-12">
-		<table class="table table-striped table-bordered table-hover table-responsive">
+		<table class="table table-bordered table-hover table-responsive table-condensed">
 			<thead>
 				<tr>
 					<th></th>
